V04S21F 04WEB Frontend-Sesion

--- a/src/app/modulos/veterinaria/vision/vision.component.html
+++ b/src/app/modulos/veterinaria/vision/vision.component.html
@@ -1,5 +1,5 @@
 <fieldset id="conocenos">
-    <legend > VISION </legend>
+    <legend style="color: blue;"> VISION </legend>
     
         <p>
             Para el 2050, posicionarse en el pais como la veterinaria numero 1, del cuidado animal, ademas de
