--- a/src/app/plantilla/pie-pagina/pie-pagina.component.html
+++ b/src/app/plantilla/pie-pagina/pie-pagina.component.html
@@ -3,12 +3,12 @@
 
 
         <div class="col l4 offset-l2 s12">
-          <h5 class="white-text">Links</h5>
+          <h5 class="white-text">Veterinaria Mascota Feliz</h5>
           <ul>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+            <li><a class="grey-text text-lighten-3" routerLink="/veterinaria/mision">Mision</a></li>
+            <li><a class="grey-text text-lighten-3" routerLink="/veterinaria/vision">Vision</a></li>
+            <li><a class="grey-text text-lighten-3" routerLink="/veterinaria/contactanos">Contactanos</a></li>
+            <li><a class="grey-text text-lighten-3" routerLink="/veterinaria/conocenos">Conocenos</a></li>
           </ul>
         </div>
     </div>
@@ -16,7 +16,7 @@
 
     <div class="footer-copyright">
         <div class="container">
-            © 2014 Copyright Text
+            © 2021 Copyright Text
             <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
         </div>
     </div>
