--- a/src/app/modulos/seguridad/ingresar/ingresar.component.html
+++ b/src/app/modulos/seguridad/ingresar/ingresar.component.html
@@ -1,1 +1,45 @@
-<p>ingresar works!</p>
+<div class="row">
+    <div class="col s12 14 offset-14">
+        <div class="cardgrey lighten-3">
+            <div class="card-content">
+                <h4 class="card-title center-align">
+                    Identificacion de Usuarios
+                </h4>
+                <form [formGroup]="fgValidador" (ngSubmit)="IdentificarUsuario()">
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <i class="material-icons prefix">
+                                email
+                            </i>
+                            <input formControlName="usuario" type="email" id="email" class="validate" />
+                            <label for="email">Usuario</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <i class="material-icons prefix">
+                                person
+                            </i>
+                            <input formControlName="rol" type="text" id="text" class="validate" />
+                            <label for="email">Rol</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <i class="material-icons prefix">vpn_key</i>
+                            <input formControlName="clave" type="password" id="password" class="validate" />
+                            <label for="email">Contraseña</label>
+                        </div>
+                    </div>
+
+
+                    <div class="row center-align">
+                        <button [disabled]="!fgValidador.valid" class="btn waves-effect waves-light" type="submit" name="action">INGRESAR
+                            <i class="material-icons right">send</i>
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
