--- a/src/app/modulos/producto/crear-producto/crear-producto.component.html
+++ b/src/app/modulos/producto/crear-producto/crear-producto.component.html
@@ -1,1 +1,42 @@
-<p>crear-producto works!</p>
+<div class="row">
+    <h3 class="center-align">Crear Producto</h3>
+    <article class="col s6 offset-s3">
+        <form [formGroup]="fgValidador" (ngSubmit)="GuardarProducto()" method="POST" action="formulario-contacto.php">
+
+            <div class="input-field">
+                <label for="nombre">Nombre</label>
+                <input formControlName="nombre" type="text" name="nombre" required>
+            </div>
+            <div class="input-field">
+                <label for="descripcion">Descripcion</label>
+                <input formControlName="descripcion" type="text" name="descripcion" required>
+            </div>
+            <div class="input-field">
+                <label for="proveedor">Proveedor</label>
+                <input formControlName="proveedor" type="text" name="proveedor" required>
+            </div>
+            <div class="input-field">
+                <label for="tipo">Tipo</label>
+                <input formControlName="tipo" type="text" name="tipo" required>
+            </div>
+            <div class="input-field">
+                <label for="departamento">Departamento</label>
+                <input formControlName="departamento" type="text" name="departamento" required>
+            </div>
+            <div class="input-field">
+                <label for="ciudad">Ciudad</label>
+                <input formControlName="ciudad" type="text" name="ciudad" required>
+            </div>   
+            <div class="input-field">
+                <label for="precio">Precio</label>
+                <input formControlName="precio" type="text" name="precio" required>
+            </div>  
+            
+            <p class="center-align">
+                <button [disabled]="!fgValidador.valid" class="waves-effect waves-light btn" type="submit">
+                    <i class="material-icons right">send</i>Enviar
+                </button>
+            </p>
+        </form>
+    </article>  
+</div>
