--- a/src/app/modulos/producto/editar-producto/editar-producto.component.html
+++ b/src/app/modulos/producto/editar-producto/editar-producto.component.html
@@ -1,1 +1,48 @@
-<p>editar-producto works!</p>
+<div class="row">
+    <h3 class="center-align">Crear Producto</h3>
+    <article class="col s6 offset-s3">
+        <form [formGroup]="fgValidador" (ngSubmit)="EditarProducto()" method="POST" action="formulario-contacto.php">
+            <input type="hidden" formControlName="id" />
+            <!----<input type="hidden" formControlName="pedidoId" />
+            <input type="hidden" formControlName="administradorId" />
+            <input type="hidden" formControlName="asesorId" />-->
+            
+
+            <div class="input-field">
+                <label for="nombre" class="active">Nombre</label>
+                <input formControlName="nombre" type="text" name="nombre" required>
+            </div>
+            <div class="input-field">
+                <label for="descripcion" class="active">Descripcion</label>
+                <input formControlName="descripcion" type="text" name="descripcion" required>
+            </div>
+            <div class="input-field">
+                <label for="proveedor" class="active">Proveedor</label>
+                <input formControlName="proveedor" type="text" name="proveedor" required>
+            </div>
+            <div class="input-field">
+                <label for="tipo" class="active">Tipo</label>
+                <input formControlName="tipo" type="text" name="tipo" required>
+            </div>
+            <div class="input-field">
+                <label for="departamento" class="active">Departamento</label>
+                <input formControlName="departamento" type="text" name="departamento" required>
+            </div>
+            <div class="input-field">
+                <label for="ciudad" class="active">Ciudad</label>
+                <input formControlName="ciudad" type="text" name="ciudad" required>
+            </div>   
+            <div class="input-field">
+                <label for="precio" class="active">Precio</label>
+                <input formControlName="precio" type="text" name="precio" required>
+            </div>  
+            
+            <p class="center-align">
+                <button [disabled]="!fgValidador.valid" class="waves-effect waves-light btn" type="submit">
+                    <i class="material-icons right">send</i>Enviar
+                </button>
+            </p>
+        </form>
+    </article>  
+</div>
+
