--- a/src/app/plantilla/barra-navegacion/barra-navegacion.component.html
+++ b/src/app/plantilla/barra-navegacion/barra-navegacion.component.html
@@ -5,7 +5,7 @@
     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
       <li *ngIf="seInicioSesion"><a routerLink="/veterinaria/conocenos">Veterinaria</a></li>
-      <li *ngIf="seInicioSesion"><a routerLink="/producto">Producto</a></li>
+      <li *ngIf="seInicioSesion"><a routerLink="/producto/informeProducto">Producto</a></li>
       <li *ngIf="seInicioSesion"><a routerLink="/seguridad/cambioClave">Cambiar Clave</a></li>
       <li *ngIf="seInicioSesion"><a routerLink="/seguridad/cerrarSesion">Cerrar Sesion</a></li>
       <li *ngIf="!seInicioSesion"><a routerLink="/seguridad/identificar">Iniciar Sesion</a></li>
